--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -22,10 +22,10 @@ html(class="no-js", ng-app="main")
       .opi-logo
       .slides
         section(data-state="index-slide")
-          h1 OPI Reveal.js Template
-          h3 HTML Presentations Made Easy
+          h1 First 5 Years
+          h3 What you need to know as a new developer.
           p.
-            <small> Created by <a href="http://twitter.com/mikerkelly">@mikerkelly</a>  | Consultant | <a href="http://www.objectpartners.com/">Object Partners</a></small>
+            <small><a href="http://twitter.com/lscottbock">@lscottbock</a>  | Consultant | <a href="http://www.objectpartners.com/">Object Partners</a></small>
             <img src="./assets/img/2015-OPI-Logo-Long.png" style="background:none; border:none; box-shadow:none;"/>
         section(data-state="github-slide", class="github-section")
           h1 <i class="fa fa-icon fa-github"></i>
