--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -31,9 +31,44 @@ html(class="no-js", ng-app="main")
           h1 <i class="fa fa-icon fa-github"></i>
           p.
             These slides are up on GitHub
-            <a href="http://objectpartners.github.io/reveal-template/" target="_blank">objectpartners.github.io/reveal-template</a>
+            <a href="http://scottbock.github.io/NewDevelopersPresentation/" target="_blank">scottbock.github.io/NewDevelopersPresentation</a>
           p.
-            Also a printable version | <a href="http://objectpartners.github.io/reveal-template/?print-pdf#/" target="_blank">Open Printable PDF</a>
+            Also a printable version | <a href="http://scottbock.github.io/NewDevelopersPresentation/?print-pdf#/" target="_blank">Open Printable PDF</a>
+        section
+          section
+            h2 About me
+            ul
+              li B.A. Math, Computer Science from NWC 2003
+              li M.S. in Mathematics from UNO 2006
+              li 9 years in DOD
+              li 5 years as consultant
+          section
+            h2 Things I'm not
+            ul
+              li A lawyer
+              li A financial planner
+              li A life coach
+              li An accountant
+        section
+          section
+            h2 What would you say you do here?
+              img(width="660", height="440", src="./assets/img/what-I-actually-do.jpg", alt="What I do")
+          section
+            h2 I thought be a programmer would be
+            ul
+              li Code all day
+              li Get well thought out requirements
+              li Create new things all the time
+          section
+            h2 What its really like
+            ul
+              li Meetings
+              li Collaboration
+              li Requirements discovery
+              li Working on other people's code
+        section
+          h2 You're now part of a team
+
         section
           h2 Heads Up
           p.
@@ -58,9 +93,7 @@ html(class="no-js", ng-app="main")
 
           section
             h2 Basement Level 2
-            p Cornify
-            a(class="test", href="http://cornify.com")
-              img(width="280", height="326", src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif", alt="Unicorn")
+
 
           section
             h2 Basement Level 3
