--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -56,260 +56,181 @@ html(class="no-js", ng-app="main")
           section
             h2 I thought be a programmer would be
             ul
-              li Code all day
+              li Code by myself all day
               li Get well thought out requirements
+                ul
+                  li Tasks take no more than a few hours each
+                  li Create a function that takes this input and gives that output
               li Create new things all the time
           section
             h2 What its really like
             ul
               li Meetings
               li Collaboration
-              li Requirements discovery
+              li Requirements not well thought out
+              li Gigantic tasks
               li Working on other people's code
         section
           h2 You're now part of a team
-
-        section
-          h2 Heads Up
-          p.
-            reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-            support for CSS 3D transforms to see it in its full glory.
-          aside.notes.
-            Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you
-            open the speaker notes window (hit 's' on your keyboard).
-
-        section
-          section
-            h2 Vertical Slides
-            p.
-              Slides can be nested inside of other slides,
-              try pressing <a href="#" class="navigate-down">down</a>.
-            a(href="#",class="image navigate-down")
-              img(width="178", height="238", src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png", alt="Down arrow")
-
-          section
-            h2 Basement Level 1
-            p Press down or up to navigate.
-
-          section
-            h2 Basement Level 2
-
-
-          section
-            h2 Basement Level 3
-            p That's it, time to go back up.
-            a(href="#/2", class="image")
-              img(width="178", height="238", src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png", alt="Up arrow", style="-webkit-transform: rotate(180deg);")
-
-        section
-          h2 Slides
-          p.
-            Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at
-            <a href="http://slid.es" target="_blank">http://slid.es</a>
-
-        section
-          h2 Point of View
-          p Press <strong>ESC</strong> to enter the slide overview.
-          p.
-            Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>.
-            Alt + click anywhere to zoom back out.
-
-        section
-          h2 Works in Mobile Safari
-          p Try it out! You can swipe through the slides and pinch your way to the overview.
-
-        section
-          h2 Marvelous Unordered List
           ul
-            li No order here
-            li Or here
-            li Or here
-            li Or here
-
+            li Help choosing tech stack
+            li Break down, estimate tasks
+            li Peer Review
+            li It's not YOUR code, it's OUR code
         section
-          h2 Fantastic Ordered List
-          ol
-            li One is smaller than...
-            li Two is smaller than...
-            li Three!
-
-        section(data-markdown)
-          script(type="text/template")
-            |  ## Markdown support
-
-            |  For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-            |  ```
-            |  <section data-markdown>
-            |    ## Markdown support
-            |    For those of you who like that sort of thing.
-            |    Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-            |  </section>
-            |  ```
-
-        section(id="transitions")
-          h2 Transition Styles
-          p.
-            You can select from different transitions, like: <br>
-            <a href="?transition=cube#/transitions">Cube</a> -
-            <a href="?transition=page#/transitions">Page</a> -
-            <a href="?transition=concave#/transitions">Concave</a> -
-            <a href="?transition=zoom#/transitions">Zoom</a> -
-            <a href="?transition=linear#/transitions">Linear</a> -
-            <a href="?transition=fade#/transitions">Fade</a> -
-            <a href="?transition=none#/transitions">None</a> -
-            <a href="?#/transitions">Default</a>
-
-        section(id="themes")
-          h2 Themes
-          p.
-            Reveal.js comes with a few themes built in: <br>
-            <a href="?theme=sky#/themes">Sky</a> -
-            <a href="?theme=beige#/themes">Beige</a> -
-            <a href="?theme=simple#/themes">Simple</a> -
-            <a href="?theme=serif#/themes">Serif</a> -
-            <a href="?theme=night#/themes">Night</a> -
-            <a href="?#/themes">Default</a>
-          p
-            small.
-              * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the
-              <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-
+          section
+            h2 Version Control
+            ul
+              li It's not YOUR code, it's OUR code
+              li Merging can be painful
+              li Don't force push (unless you know what you're doing)
+          section
+            ul
+              li Good - Git, SVN, Mercurial
+              li Bad - Some other tooling (StarTeam, Accurev)
+              li Ugly - File system
         section
-          h2 Global State
-          p.
-            Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-            will be added as a class to the document element when the slide is open. This lets you
-            apply broader style changes, like switching the background.
-
-        section(data-state="customevent")
-          h2 Custom Events
-          p Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-          pre.
-            <code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-            Reveal.addEventListener( 'customevent', function() {
-              console.log( '"customevent" has fired' );
-            } );
-            </code>
+          section
+            h2 Peer Review
+            ul
+              li It's not YOUR code, it's OUR code
+              li Don't take critique personally
+              li Be thorough when reviewing others
+              li Be kind
+          section
+            ul
+              li Good - Some Tooling
+              li Bad - Ad Hoc
+              li Ugly - No Peer Review
         section
-          section(data-background="#007777")
-            h2 Slide Backgrounds
+          section
+            h2 Tests
+            ul
+              li It's not YOUR code, it's OUR code
+              li Not just for Java, JS too
+              li Unit and Integration Tests
+          section
+            ul
+              li Good - Spock, Mockito, Karma, Geb
+              li Bad - Unit test only, Only on server side code
+              li Ugly - No tests
+          section
+            h2 TDD
+            h3 Test Driven Development
             p.
-              Set <code>data-background="#007777"</code> on a slide to change the full page background to the given color.
-              All CSS color formats are supported.
-            a(href="#", class="image navigate-down")
-              img(width="178", height="238", src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png", alt="Down arrow")
-
-          section(data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png")
-            h2 Image Backgrounds
-            pre
-              code &lt;section data-background="image.png"&gt;
-
-          section(data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png", data-background-repeat="repeat", data-background-size="100px")
-            h2 Repeated Image Backgrounds
-            pre
-              code(style="word-wrap: break-word;") &lt;section data-background="image.png" data-background-repeat="repeat" data-background-size="100px"&gt;
-
-
-        section(data-transition="linear", data-background="#4d7e65", data-background-transition="slide")
-          h2 Background Transitions
-          p Pass reveal.js the <code>backgroundTransition: 'slide'</code> config argument to make backgrounds slide rather than fade.
-
-        section(data-transition="linear", data-background="#8c4738", data-background-transition="slide")
-          h2 Background Transition Override
-          p You can override background transitions per slide by using <code>data-background-transition="slide"</code>.
+              Write your test first (it will fail), then fix it.
 
         section
-          h2 Clever Quotes
+          h2 Favorite current technologies
           p.
-            These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-            &ldquo;The nice thing about standards is that there are so many to choose from&rdquo;</q> and block:
-          blockquote(cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations").
-            &ldquo;For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-            reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.&rdquo;
-
-        section
-          h2 Pretty Code
-          pre.
-            <code data-trim contenteditable>
-            function linkify( selector ) {
-              if( supports3DTransforms ) {
-                var nodes = document.querySelectorAll( selector );
-                for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-                  var node = nodes[i];
-                  if( !node.className ) {
-                    node.className += ' roll';
-                  }
-                };
-              }
-            }
-            </code>
-          p Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.
-
-        section
-          h2 Intergalactic Interconnections
+            Groovy, Java + Lombok
           p.
-            You can link between slides internally,
-            <a href="#/2/3">like this</a>.
+            Spring Boot, Grails (may be on the way out)
+          p.
+            React, Angular
+          p.
+            IntelliJ, Bootstrap
 
         section
           section
-            h2 Fragmented Views
-            p.fragment ... to step through ...
+            h2 Good News
+            p.
+              I'm in a room full of future Millionaires
+          section
+            h2 Future Millionaires
+            p.
+              There are more jobs than experienced developers, right now.
+            p.
+              In 2-5 years you will be those experienced developers that are so hard to find.
+            p.
+              You have the earning potential, but...
+          section
+            h2 Future Millionaires
+            p.
+              Its not going to happen automatically.  You have to do 2 things:
             ol
-              li.fragment
-                code any type
-              li.fragment
-                em of view
-              li.fragment
-                strong fragments
-            aside.notes This slide has fragments which are also stepped through in the notes window.
-
+              li Spend less than you make
+              li Start saving early
           section
-            h2 Fragment Styles
-            p There's a few styles of fragments, like:
-            p.fragment.grow grow
-            p.fragment.shrink shrink
-            p.fragment.roll-in roll-in
-            p.fragment.fade-out fade-out
-            p.fragment.highlight-red highlight-red
-            p.fragment.highlight-green highlight-green
-            p.fragment.highlight-blue highlight-blue
+            h2 Spend less than you make
+            ol
+              li Make a Budget
+              li Pay off your debts
+              li Don’t get a new car
+              li Don’t rush to buy a house (20% down, 15yr mortgage)
+              li Don’t eat out for lunch all the time
+              li Normal === Broke
+          section
+            h2 Start saving early
+            p.
+              Save $50/week for 40 years earning 10% = $1,265,815.00
+            p.
+              Save $50/week for 30 years earning 10% = $470,453.00
+          section
+            h2 Retirement
+            ul
+              li <b>401K</b> - Pre-tax contributions. Taxed distributions. May have employer matching.  Limited by your employer's choices
+              li <b>Roth IRA</b> - Post-tax contributions.  Non-taxed distributions.  Choose whatever funds you want.
+              li <b>Roth 401K</b> - Employer sponsored Roth
+              li <b>Traditional IRA (non-401K)</b> - Like a 401K, but without employer sponsorship
+          section
+            h2 Maximize your earnings
+            ul
+              li Make connections
+              li Pay attention to other technologies (user groups)
+              li Look to switch jobs every 2-3 years (sad but true)
+          section
+            h2 What to do if your job stinks (they all do in some way)
+            ul
+              li User groups
+              li Open source
+              li Side Hustle - find someone you know. Help them solve a problem (simple website for a small business) word will spread
+          section
+            h2 Reading List
+            p.
+              The Total Money Makeover - Dave Ramsey
+            p.
+              The Millionaire Next Door - Thomas J. Stanley
 
         section
-          h2 Spectacular image!
-          a.image(href="http://lab.hakim.se/meny/", target="_blank")
-            img(width="320", height="299", src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png", alt="Meny")
+          section
+            h2 Health Insurance
+            p.
+              Depending on the company you might have many choices, you might have no choices.  Probably, part of the premium will be paid for by employer and part by yourself
+            p.
+              Premium, Deductible, Health Savings Account (HSA), Flexible Savings Account (FSA)
+          section
+            h2 Premium
+            p.
+              The cost (usually paid each paycheck) to maintain your insurance.
+          section
+            h2 Deductible
+            p.
+              The portion of a claim that you are responsible: may be per visit, per year, depends on what was provided and by whom
+          section
+            h2 Health Savings Account (HSA)
+            p.
+              Pre-tax contribution to an account. Don't have to spend it each year. Paired with a High Deductible Policy.
+          section
+            h2 Flexible Savings Account (FSA)
+            p.
+              Pre-tax contribution to an account.  Must use it all EACH YEAR.
 
         section
-          h2 Export to PDF
-          p.
-            Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>,
-            below is an example that's been uploaded to SlideShare.
-          iframe(id="slideshare", src="http://www.slideshare.net/slideshow/embed_code/13872948", width="455", height="356", style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px", allowfullscreen)
-          script.
-            document.getElementById('slideshare').attributeName = 'allowfullscreen';
-
+          section
+            h2 3 Reasons to go to Grad School
+            ol
+              li You love the academic part of programming
+              li You want to teach it
+              li You're company will pay for it
+          section
+            h2 Grad School
+            p.
+              If you're going to go, start right away.
+            p.
+              If your company reimburses you, be aware you might have to pay it back if you leave the company too soon.
         section
-          h2 Take a Moment
-          p.
-            Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-            during a presentation.
-
-        section
-          h2 Stellar Links
-          ul
-            li
-              a(href="http://slid.es") Try the online editor
-            li
-              a(href="https://github.com/hakimel/reveal.js") Source code on GitHub
-            li
-              a(href="http://twitter.com/hakimel") Follow me on Twitter
-
-        section
-          h1 THE END
-          h3 BY Hakim El Hattab / hakim.se
-
+          h1 Questions?
 
     script(src="./assets/js/app.js")
 
