--- a/src/assets/less/templates/opi.less
+++ b/src/assets/less/templates/opi.less
@@ -24,6 +24,8 @@ body {
   .gradient(radial-gradient(center, circle cover, @body-gradient-start 0%, @body-gradient-end 100%));
 }
 
+p.left { text-align: left; }
+
 .reveal {
   font-family: 'Lato', sans-serif;
   font-size: 36px;
