--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,3 +1,21 @@
+Skip to content
+This repository
+Search
+Pull requests
+Issues
+Gist
+@scottbock
+  Sign out
+  Unwatch 1
+    Star 0
+  Fork 0 scottbock/NewDevelopersPresentation
+  Code  Issues 0  Pull requests 0  Projects 0  Wiki  Pulse  Graphs  Settings
+Tree: bf1154be93 Find file Copy pathNewDevelopersPresentation/src/views/index.jade
+bf1154b  14 minutes ago
+@scottbock scottbock more slides
+2 contributors @scottbock @staticnull
+RawBlameHistory
+288 lines (276 sloc)  11 KB
 !!! 5
 //if IE 7
   html(lang="en", class="no-js ie", data-ng-app="main", id="ng-app")
@@ -71,12 +89,19 @@ html(class="no-js", ng-app="main")
               li Gigantic tasks
               li Working on other people's code
         section
-          h2 You're now part of a team
-          ul
-            li Help choosing tech stack
-            li Break down, estimate tasks
-            li Peer Review
-            li It's not YOUR code, it's OUR code
+          section
+            h2 You're now part of a team
+            ul
+              li Help choosing tech stack
+              li Break down, estimate tasks
+              li Peer Review
+              li It's not YOUR code, it's OUR code
+          section
+            h2 Programming as part of a team
+            ul
+              li Version Control
+              li Peer Review
+              li Testing
         section
           section
             h2 Version Control
@@ -85,10 +110,10 @@ html(class="no-js", ng-app="main")
               li Merging can be painful
               li Don't force push (unless you know what you're doing)
           section
-            ul
-              li Good - Git, SVN, Mercurial
-              li Bad - Some other tooling (StarTeam, Accurev)
-              li Ugly - File system
+            h3
+              p <i class="fa fa-icon fa-smile-o"></i> Good - Git, SVN, Mercurial
+              p <i class="fa fa-icon fa-meh-o"></i> Bad - Some other tooling (StarTeam, Accurev)
+              p <i class="fa fa-icon fa-frown-o"></i> Ugly - File system
         section
           section
             h2 Peer Review
@@ -98,10 +123,10 @@ html(class="no-js", ng-app="main")
               li Be thorough when reviewing others
               li Be kind
           section
-            ul
-              li Good - Some Tooling
-              li Bad - Ad Hoc
-              li Ugly - No Peer Review
+            h3
+              p <i class="fa fa-icon fa-smile-o"></i> Good - Some Tooling
+              p <i class="fa fa-icon fa-meh-o"></i> Bad - Ad Hoc
+              p <i class="fa fa-icon fa-frown-o"></i> Ugly - No Peer Review
         section
           section
             h2 Tests
@@ -110,10 +135,19 @@ html(class="no-js", ng-app="main")
               li Not just for Java, JS too
               li Unit and Integration Tests
           section
-            ul
-              li Good - Spock, Mockito, Karma, Geb
-              li Bad - Unit test only, Only on server side code
-              li Ugly - No tests
+            h2 Why Integration Tests
+              img(width="660", height="440", src="./assets/img/int-test-drawer.jpg", alt="Int Test")
+          section
+            h2 Still Not Getting It
+              img(width="660", height="440", src="./assets/img/int-test-lock.gif", alt="What I do")
+          section
+            h2 One more for the road
+              img(width="660", height="440", src="./assets/img/int-test-handles.gif", alt="What I do")
+          section
+            h3
+              p <i class="fa fa-icon fa-smile-o"></i> Good - Spock, Mockito, Karma, Geb
+              p <i class="fa fa-icon fa-meh-o"></i> Bad - Unit test only, Only on server side code
+              p <i class="fa fa-icon fa-frown-o"></i> Ugly - No tests
           section
             h2 TDD
             h3 Test Driven Development
@@ -179,10 +213,16 @@ html(class="no-js", ng-app="main")
               li Make connections
               li Pay attention to other technologies (user groups)
               li Look to switch jobs every 2-3 years (sad but true)
+                ul
+                  li Don't advertise to your current employer that you're looking
+                  li Go ahead and apply/interview, you don't have to accept every job you're offered
           section
             h2 What to do if your job stinks (they all do in some way)
+            p.
+              Make connections and get a new one.
             ul
               li User groups
+              li Conferences
               li Open source
               li Side Hustle - find someone you know. Help them solve a problem (simple website for a small business) word will spread
           section
@@ -229,6 +269,19 @@ html(class="no-js", ng-app="main")
               If you're going to go, start right away.
             p.
               If your company reimburses you, be aware you might have to pay it back if you leave the company too soon.
+            p.
+              Depending on the company have a masters degree is probably worth about 2 years of experience.
+
+        section
+          h2 The Next 5 Years
+          p.
+            Career Path != Manager or Architect
+          p.
+            Get your house paid off
+          p.
+            Mentor
+
+
         section
           h1 Questions?
 
@@ -236,17 +289,19 @@ html(class="no-js", ng-app="main")
 
     // If the query includes 'print-pdf', use the PDF print sheet
     script(type='text/javascript').
-      if( window.location.search.match( /print-pdf/gi ) ) {
-        var link = document.createElement( 'link' );
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = './assets/css/print/pdf.css';
-        document.getElementsByTagName( 'head' )[0].appendChild( link );
-      } else if ( window.location.search.match( /print-paper/gi ) ) {
-        var link = document.createElement( 'link' );
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = './assets/css/print/paper.css';
-        document.getElementsByTagName( 'head' )[0].appendChild( link );
-      }
+        if( window.location.search.match( /print-pdf/gi ) ) {
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = './assets/css/print/pdf.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        } else if ( window.location.search.match( /print-paper/gi ) ) {
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = './assets/css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        }
 
+Contact GitHub API Training Shop Blog About
+© 2017 GitHub, Inc. Terms Privacy Security Status Help
